gcc/testsuite/rust/rustc/ui/parser/removed-syntax-fixed-vec.rs
type v = [isize * 3]; // { dg-error "" "" { target *-*-* } }

